Terminar fillitems Anyadir debug Cambiar getQuestion por showQuestion donde toque

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -13,6 +13,7 @@
 0.step.option=Go to this installation step
 0.tomcat_base.option=Tomcat Base directory
 0.verbose.option=Verbosity
+0.debug.option=Enable debug messages
 
 0.step.fail=Step not ok.
 
@@ -28,6 +29,17 @@
 0.step.fillitems=7
 0.step.exit=8
 
+0.authentication=Dspace User authentication
+0.email.user=Email of the dspace user:
+0.password.user=Password of the dspace user:
+0.invalid.user=User not valid.
+
+0.checkAllSkosAuthElements.searching.elements=Searching auth elements in #?# collections.
+0.checkAllSkosAuthElements.searching.elements.collection=Searching auth elements in collection: #?# with handle #?#
+0.checkAllSkosAuthElements.searching.elements.item=Searching auth elements in item: #?# with handle #?#
+
+0.checkSkosAuthItem.elements=Elements: #?#
+0.checkSkosAuthItem.element=Auth element: #?#
 
 
 1=Beginning step 1: Installing Askosi
@@ -91,10 +103,6 @@
 2.summary=As surely on this step, communities, collections and items will be created in dspace for the auth elements, an authentication with a dspace user is required.\nDc elements will be able to be selected to create sets of auth elements in dspace.\nCommunity and collection will be created/linked to these auth elements.\nNon auth collections will be traversed to look for unique values and added to auth items in their collections.\nAuth items will be created with type SKOS_AUTH.
 
 2.fail=Failed to complete step 2.
-2.title=Dspace User authentication
-2.email.user=Email of the dspace user:
-2.password.user=Password of the dspace user:
-2.invalid.user=User not valid.
 
 2.createAuth.notschema=There is not schema #?#
 2.createAuth.numelements=Number elements in schema #?#:  #?#
@@ -159,13 +167,6 @@
 3.readDspaceCfg.line.found=Found line: #?#
 3.readDspaceCfg.line.found.element=Found line: #?# with element #?#
 
-3.checkAllSkosAuthElements.searching.elements=Searching auth elements in #?# collections.
-3.checkAllSkosAuthElements.searching.elements.collection=Searching auth elements in collection: #?# with handle #?#
-3.checkAllSkosAuthElements.searching.elements.item=Searching auth elements in item: #?# with handle #?#
-
-3.checkSkosAuthItem.elements=Elements: #?#
-3.checkSkosAuthItem.element=Auth element: #?#
-
 3.processAskosiVocabularies.create=Creating askosi configuration file "#?#" for vocabulary "#?#"
 
 
@@ -209,3 +210,10 @@
 7=Beginning step 7: Fill skos:about items with values of authorities.
 7.summary=The collections with authority items will be traversed to get the dc elements.\nThe collections with non authority items will be traversed to get the dc elements linked with the ones from the authorites.\nIf there is a match the authority handle will be stored in the authority field of the table metadatavalue of the database for the non auth item.
 7.configure.auth.num=Number of auth elements: #?#
+7.configure.checkAllSkosAuthElements=Getting the DC elements related to authorities
+7.configure.traverseNonauthItems=Traversing items to assign authorities to the DC elements matching an authority
+7.traverseNonauthItems.nopermission=User #?# has not admin permissions for item with handle #?#
+7.traverseNonauthItems.collection=Collection #?# with handle #?#
+7.traverseNonauthItems.item=Item #?# with handle #?#
+7.traverseNonauthItems.changeitem=Item with handle #?# modified with authority #?#
+7.traverseNonauthItems.searchNonAuthItems=Searching authority with dc element #?# and value #?#
