--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -13,6 +13,7 @@
 0.step.option=Ir a este paso de la instalación
 0.tomcat_base.option=Directorio base del servidor de aplicaciones (e.g: Tomcat)
 0.verbose.option=Verbosidad
+0.debug.option=Habilitar mensajes de debug
 
 0.step.fail=Paso no correcto
 
@@ -27,6 +28,19 @@
 0.step.edmcrosswalkxsl=6
 0.step.fillitems=7
 0.step.exit=8
+
+0.authentication=Autenticación de usuario de Dspace
+0.email.user=Email de usuario en dspace:
+0.password.user=Clave del usuario en dspace:
+0.invalid.user=El usuario no es válido.
+
+0.checkAllSkosAuthElements.searching.elements=Buscando elementos de autoridad en #?# colecciones.
+0.checkAllSkosAuthElements.searching.elements.collection=Buscando elementos de autoridad en la colección: #?# con handle #?#
+0.checkAllSkosAuthElements.searching.elements.item=Buscando elementos de autoridad en el item: #?# con handle #?#
+
+0.checkSkosAuthItem.elements=Elementos: #?#
+0.checkSkosAuthItem.element=Elemento de autoridad: #?#
+
 
 1=Comenzando paso 1: Instalación de Askosi
 1.summary=Se van a comprobar los archivos dentro del directorio packages del instalador para ver que las firmas y los permisos sean correctos.\nSe copiarán los archivos jar al directorio de las librerías compartidas del servidor de aplicaciones, son necesarios para Askosi.\n\tEjemplos: en Linux Debian: /var/lib/tomcat5.5/shared/lib/; en Linux RedHat: /usr/local/tomcat6/lib/; en OpenBSD: /var/tomcat/shared/lib/\nSe copiará el archivo jar con el driver de la base de datos desde el directorio lib del instalador al directorio de librerías comunes del servidor de aplicaciones.\n\tEjemplos: en Linux Debian: /usr/share/tomcat5.5/common/lib/; en Linux RedHat: /usr/local/tomcat6/lib/; en OpenBSD: /var/tomcat/shared/lib/\nSe copiará y desplegará el archivo askosiWebapp.zip desde packages al directorio de webapps del servidor de aplicaciones.\nSe extraerán las clases del archivo classes.zip en packages al directorio classes donde está desplegado el jspui en dspace, para instalar el plugin de askosi.\nSe extraerán los archivos de exampleAskosiData.zip desde packages al directorio de datos de Askosi.
@@ -89,10 +103,6 @@
 2.summary=Como en este paso se van a crear comunidades, colecciones e ítems en dspace para las autoridades, se ha de validar como un usuario de dspace con permisos.\nSe mostrarán todos los elementos del esquema dc para escoger sobre cuáles crear conjuntos de autoridades en dspace.\nSe crearán/asociarán una comunidad y colección para estos elementos.\nSe recorrerán los ítems de las colecciones que no son de autoridades para buscar valores diferentes de estos elementos y añadiros a ítems de la colección de autoridades.\nLos ítems de autoridades se crearán con el tipo SKOS_AUTH.
 
 2.fail=Falló el paso 2.
-2.title=Autenticación de usuario de Dspace
-2.email.user=Email de usuario en dspace:
-2.password.user=Clave del usuario en dspace:
-2.invalid.user=El usuario no es válido.
 
 2.createAuth.notschema=No existe el esquema #?#
 2.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
@@ -156,13 +166,6 @@
 3.readDspaceCfg.line.found=Línea encontrada: #?#
 3.readDspaceCfg.line.found.element=Línea encontrada: #?# con el elemento #?#
 
-3.checkAllSkosAuthElements.searching.elements=Buscando elementos de autoridad en #?# colecciones.
-3.checkAllSkosAuthElements.searching.elements.collection=Buscando elementos de autoridad en la colección: #?# con handle #?#
-3.checkAllSkosAuthElements.searching.elements.item=Buscando elementos de autoridad en el item: #?# con handle #?#
-
-3.checkSkosAuthItem.elements=Elementos: #?#
-3.checkSkosAuthItem.element=Elemento de autoridad: #?#
-
 3.processAskosiVocabularies.create=Creando el archivo de configuración de askosi "#?#" para el vocabulario "#?#"
 
 
@@ -206,3 +209,10 @@
 7=Comenzando el paso 7: Rellenar los skos:about de los ítems con los valores de las autoridades.
 7.summary=Se recorrerán todas las colecciones con ítems que son autoridades para recoger los elementos dc asociados.\nSe recorrerán todas las colecciones con ítems que no son autoridades para recoger los elementos dc que se corresponden con los recogidos de las autoridades.\nSi hay una coincidencia se almacenará el handle de la autoridad en el campo authority de la tabla metadatavalue de la bbdd para el element dc del ítem normal.
 7.configure.auth.num=Número de elementos de autoridades: #?#
+7.configure.checkAllSkosAuthElements=Recogiendo los elementos DC que son autoridades
+7.configure.traverseNonauthItems=Recorriendo los ítems para asignarles autoridades a los elementos DC con valores coincidentes con una autoridad
+7.traverseNonauthItems.nopermission=El usuario #?# no tiene permisos de admin para el ítem con handle #?#
+7.traverseNonauthItems.collection=Colección #?# con handle #?#
+7.traverseNonauthItems.item=Item #?# con handle #?#
+7.traverseNonauthItems.changeitem=Item con handle #?# modificado con autoridad #?#
+7.traverseNonauthItems.searchNonAuthItems=Buscando autoridad con elemento dc #?# y valor #?#
