Cachear auth en fillitems para no preguntar tanto a la bbdd Preguntar q elementos dc y colecciones a rellenar

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -209,11 +209,23 @@
 
 7=Beginning step 7: Fill skos:about items with values of authorities.
 7.summary=The collections with authority items will be traversed to get the dc elements.\nThe collections with non authority items will be traversed to get the dc elements linked with the ones from the authorites.\nIf there is a match the authority handle will be stored in the authority field of the table metadatavalue of the database for the non auth item.
+
 7.configure.auth.num=Number of auth elements: #?#
 7.configure.checkAllSkosAuthElements=Getting the DC elements related to authorities
 7.configure.traverseNonauthItems=Traversing items to assign authorities to the DC elements matching an authority
+
 7.traverseNonauthItems.nopermission=User #?# has not admin permissions for item with handle #?#
 7.traverseNonauthItems.collection=Collection #?# with handle #?#
 7.traverseNonauthItems.item=Item #?# with handle #?#
 7.traverseNonauthItems.changeitem=Item with handle #?# modified with authority #?#
 7.traverseNonauthItems.searchNonAuthItems=Searching authority with dc element #?# and value #?#
+
+7.showMenuDCElements=Menu to select Auth DC elements
+7.showMenuDCElements.menu=l: list DC elements|a: use all DC elements|x: exit|write DC elements separated by commas
+7.showMenuDCElements.listdc=List of Auth DC Elements
+7.showMenuDCElements.dcelement.notexist=Element #?# does not exist
+
+7.showMenuCollections=Menu to select collections of non auth items
+7.showMenuCollections.menu=a: use all the collections|x: exit|write the collections handles\
+  separated by commas
+7.showMenuCollections.collection.notexist=Collection with handle #?# does not exist
