--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -208,11 +208,24 @@
 
 7=Comenzando el paso 7: Rellenar los skos:about de los ítems con los valores de las autoridades.
 7.summary=Se recorrerán todas las colecciones con ítems que son autoridades para recoger los elementos dc asociados.\nSe recorrerán todas las colecciones con ítems que no son autoridades para recoger los elementos dc que se corresponden con los recogidos de las autoridades.\nSi hay una coincidencia se almacenará el handle de la autoridad en el campo authority de la tabla metadatavalue de la bbdd para el element dc del ítem normal.
+
 7.configure.auth.num=Número de elementos de autoridades: #?#
 7.configure.checkAllSkosAuthElements=Recogiendo los elementos DC que son autoridades
 7.configure.traverseNonauthItems=Recorriendo los ítems para asignarles autoridades a los elementos DC con valores coincidentes con una autoridad
+
 7.traverseNonauthItems.nopermission=El usuario #?# no tiene permisos de admin para el ítem con handle #?#
 7.traverseNonauthItems.collection=Colección #?# con handle #?#
 7.traverseNonauthItems.item=Item #?# con handle #?#
 7.traverseNonauthItems.changeitem=Item con handle #?# modificado con autoridad #?#
 7.traverseNonauthItems.searchNonAuthItems=Buscando autoridad con elemento dc #?# y valor #?#
+
+7.showMenuDCElements=Menú para seleccionar elementos DC de las autoridades
+7.showMenuDCElements.menu=l: listar los elementos DC|a: usar todos los elementos DC|x: salir|escribir elementos DC \
+  separados por coma
+7.showMenuDCElements.listdc=Lista de elementos DC de las autoridades
+7.showMenuDCElements.dcelement.notexist=El elemento #?# no existe
+
+7.showMenuCollections=Menú para seleccionar colecciones de ítems que no son autoridades
+7.showMenuCollections.menu=a: usar todas las colecciones|x: salir|escribir los handles de la colecciones \
+  separados por coma
+7.showMenuCollections.collection.notexist=La colección con handle #?# no existe
