En la creacion de autoridades comprobar que el usuario es admin

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -104,6 +104,7 @@
 
 2.fail=Failed to complete step 2.
 
+2.createAuth.noadmin=User #?# is not admin
 2.createAuth.notschema=There is not schema #?#
 2.createAuth.numelements=Number elements in schema #?#:  #?#
 2.createAuth.menu=DC elements as authorities collections (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit)
