--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -104,6 +104,7 @@
 
 2.fail=Falló el paso 2.
 
+2.createAuth.noadmin=El usuario #?# no es administrador
 2.createAuth.notschema=No existe el esquema #?#
 2.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
 2.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
