--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -177,6 +177,8 @@
 4.checkEDMExporWar.notexists=#?# war file does not exist is not a file or is not writeable
 4.checkEDMExporWar.newwar=Introduce new war file or intro fo finish.
 
+4.configure.edmexport.add=Creating new EDMExport.war in #?#.
+4.configure.edmexport.file.exists=#?# File exists. Replace it ([y]/n)?
 4.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
 4.configure.nopath=There is no <param-name>dspace-config</param-name> element
 4.configure.dspacecfg=Dspace configuration file "#?#" or enter a new one:
@@ -193,6 +195,8 @@
 5.checkOaiApiJar.notexists=#?# jar file does not exist is not a file or is not writeable
 5.checkOaiApiJar.newjar=Introduce new jar file or intro fo finish.
 
+5.configure.edmcrosswalk.oaiapijar.add=Creating new oai api jar in #?#.\nWhen you have checked the file, replace #?# with this new one.
+5.configure.edmcrosswalk.oaiapijar.file.exists=#?# File exists. Replace it ([y]/n)?
 5.configure.exists.class=There is already a "#?#" in the "#?#" jar file. Continue (y/[n])?
 5.configure.edmcrosswalk.conf.begin=Beginning the configuration of the "#?#" to customize some parameters
 5.configure.edmcrosswalk.conf.edmrights=Url for the element edm.rights:
@@ -203,9 +207,38 @@
 5.configure.edmcrosswalk.conf.edmtypes.type.value.update=Values for types "#?#" separated by commas, actually: #?#
 5.configure.edmcrosswalk.conf.compile=Compiling the new class
 5.configure.edmcrosswalk.conf.updatejar=Updating jar file "#?#" with the new class
+5.configure.edmcrosswalk.oaicat.add=Creating new oaicat.properties in #?#.\nWhen you have checked the file, replace #?# with this new one.
+5.configure.edmcrosswalk.oaicat.file.exists=#?# File exists. Replace it ([y]/n)?
 5.configure.edmcrosswalk.conf.oaicat=Oai file properties to copy to work dir to add EDMCrosswalk, "#?#" or give another one:
 5.configure.edmcrosswalk.conf.ok=Configuring EDMCrosswalk finished successfully. Remember to copy the files on work to dspace environment:\n oaicat.properties to the dspace config dir\n #?# to the WEB-INF/lib dir of the oai deployed module.
 5.configure.edmcrosswalk.conf.nok=Error configuring EDMCrosswalk
+
+
+6=Beginning step 6: Configure EDMCrosswalk with xsl
+6.summary=File "dspace.cfg" will be copied from dspace config file to the work dir.\nFile "DIM2EDM.xsl" will be copied from pachages dir to the work dir.\nFile "oaicat.properties" will be copied from dspace config dir to the work dir.\nFile DIM2EDM.xsl wil be configures asking for values for some edm elements.\nFile "dspace.cfg" will be modified to add the dissemination crosswalk.\nFile "oaicat.properties" will be modified to add the edm crosswalk.
+
+6.configure.dspacecfg.add=Creating dspace.cfg in #?#.\nWhen you have checked the file, replace #?# with this new one.
+6.configure.dspacecfg.file.exists=#?# File exists. Replace it ([y]/n)?
+6.configure.dim2edm.add=Creating DIM2EDM.xsl in #?#.\nWhen you have checked the file, replace #?# with this new one.
+6.configure.dim2edm.file.exists=#?# File exists. Replace it ([y]/n)?
+6.configure.oaicat.add=Creating oaicat.properties in #?#.\nWhen you have checked the file, replace #?# with this new one.
+6.configure.oaicat.file.exists=#?# File exists. Replace it ([y]/n)?
+6.configure.dspacedirconf.notexist=Files "#?#" "#?#" do not exist or are not readable or dir #?# is not writable.
+6.configure.ok=Configuring EDMCrosswalk with xsl finished successfully.\nRemember to copy the files on work to dspace environment:\ndspace.cfg and oaicat.properties files to the dspace config dir\nDIM2EDM.xsl file to crosswalks dspace config dir
+
+6.checkOldOaiProperties.crosswalk.xsl.exist=There is already an xsl edm crosswalk configured in #?#
+6.checkOldOaiProperties.crosswalk.java.exist=There is already an java edm crosswalk configured in #?#
+6.checkOldOaiProperties.crosswalk.unknown.exist=There is already an edm crosswalk configured in #?#
+
+6.checkOldEDMCrosswalk.crosswalk.xsl.exist=There is already an xsl edm crosswalk configured in #?# with stylesheet #?#
+
+6.configureDim2EdmXslVariableHandle=Write the current uri that dspace build the handles with, now: #?#
+6.configureDim2EdmXslVariableIdentUriOrig=Write the uri that you want to build the handles with, now: #?#
+6.configureDim2EdmXslAggregationDataProvider=Write the data provider (edm:dataProvider element from ore:Aggregation), now: #?#
+6.configureDim2EdmXslAggregationProvider=Write the provider (edm:provider element from ore:Aggregation), now: #?#
+6.configureDim2EdmXslRights=Write the uri for the rights licence (edm:rights element from ore:Aggregation), now: #?#
+6.configureDim2EdmXslProviderCHOType=Write the item types (edm:type element from edm:ProvidedCHO), now: #?#
+6.configureDim2EdmXslProviderCHOLanguage=Write language (edm:language element from edm:ProvidedCHO), now: #?#
 
 
 7=Beginning step 7: Fill skos:about items with values of authorities.
