--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -176,6 +176,8 @@
 4.checkEDMExporWar.notexists=El archivo war #?# no existe o no tiene permisos de escritura.
 4.checkEDMExporWar.newwar=Introduzca la ruta del archivo war o intro para terminar.
 
+4.configure.edmexport.add=Creando nuevo EDMExport.war en #?#.
+4.configure.edmexport.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
 4.configure.notwebxml=No existe el archivo "WEB-INF/web.xml" en el archivo war
 4.configure.nopath=No existe el elemento <param-name>dspace-config</param-name>
 4.configure.dspacecfg=Archivo de configuración de Dspace "#?#" o introduzca la ruta correcta:
@@ -192,6 +194,8 @@
 5.checkOaiApiJar.notexists=El archivo jar #?# no existe o no tiene permisos de escritura
 5.checkOaiApiJar.newjar=Introduzca la ruta del archivo con el jar de la api para oai de dspace o intro para terminar.
 
+5.configure.edmcrosswalk.oaiapijar.add=Creando nuevo archivo de oai api jar en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+5.configure.edmcrosswalk.oaiapijar.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
 5.configure.exists.class=Ya existe la clase "#?#" en el archivo jar "#?#". ¿Continuar, se reemplazará el actual (y/[n])?
 5.configure.edmcrosswalk.conf.begin=Comenzando la configuración de "#?#" para parametrizarlo.
 5.configure.edmcrosswalk.conf.edmrights=Url para el elemento edm.rights:
@@ -202,9 +206,38 @@
 5.configure.edmcrosswalk.conf.edmtypes.type.value.update=Valores para los tipos "#?#" separados por comas, actualmente: #?#
 5.configure.edmcrosswalk.conf.compile=Compilando la nueva clase
 5.configure.edmcrosswalk.conf.updatejar=Actualizando el archivo jar "#?#" con la nueva clase
+5.configure.edmcrosswalk.oaicat.add=Creando nuevo archivo oaicat.properties en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+5.configure.edmcrosswalk.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
 5.configure.edmcrosswalk.conf.oaicat=El archivo de propiedades de Oai para copiar al directorio de trabajo para añadir el EDMCrosswalk, "#?#" o introduzca uno nuevo:
 5.configure.edmcrosswalk.conf.ok=La configuración del EDMCrosswalk terminó correctamente. Recuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\n oaicat.properties al directorio de configuración de dspace\n #?# al directorio WEB-INF/lib donde se haya desplegado el módulo oai de dspace.
 5.configure.edmcrosswalk.conf.nok=Error configurando el EDMCrosswalk
+
+
+6=Comenzando el paso 6: Configurar EDMCrosswalk mediante xsl
+6.summary=Se copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo.\nSe copiará el archivo DIM2EDM.xsl al directori de trabajo.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo.\nSe configurará el archivo DIM2EDM.xsl pidiendo valores para elementos de edm específicos.\nSe modificará el archivo dspace.cfg del directorio de trabajo para aceptar este crosswalk de diseminación.\nSe modificará el archivo del directorio de trabajo oaicat.properties para añadir el edmcrosswalk.
+
+6.configure.dspacecfg.add=Creando nuevo archivo dspace.cfg en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+6.configure.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.dim2edm.add=Creando nuevo archivo DIM2EDM.xsl en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+6.configure.dim2edm.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.oaicat.add=Creando nuevo archivo oaicat.properties en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
+6.configure.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
+6.configure.dspacedirconf.notexist=Los archivos "#?#" "#?#" no existen o no tienen permisos de lectura o el directorio #?# no tiene permisos de escritura.
+6.configure.ok=La configuración del EDMCrosswalk con xsl terminó correctamente.\nRecuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\nLos archivos dspace.cfg y oaicat.properties al directorio de configuración de dspace\nEl archivo DIM2EDM.xsl al directorio de crosswalks de configuración de dspace
+
+6.checkOldOaiProperties.crosswalk.xsl.exist=Ya existe un crosswalk edm con xsl configurado en #?#
+6.checkOldOaiProperties.crosswalk.java.exist=Ya existe un crosswalk edm con java configurado en #?#
+6.checkOldOaiProperties.crosswalk.unknown.exist=Ya existe un crosswalk edm configurado en #?#
+
+6.checkOldEDMCrosswalk.crosswalk.xsl.exist=Ya existe un crosswalk edm con xsl configurado en #?# con hoja de transformación #?#
+
+6.configureDim2EdmXslVariableHandle=Introducir la uri con la que viene la dirección de los handle, actualmente: #?#
+6.configureDim2EdmXslVariableIdentUriOrig=Introducir la uri con la que se formarán los enlaces a los ítems, actualmente: #?#
+6.configureDim2EdmXslAggregationDataProvider=Introducir el nombre del suministrador de datos (elemento edm:dataProvider de ore:Aggregation), actualmente: #?#
+6.configureDim2EdmXslAggregationProvider=Introducir el nombre del suministrador (elemento edm:provider de ore:Aggregation), actualmente: #?#
+6.configureDim2EdmXslRights=Introducir la uri del acuerdo de derechos (elemento edm:rights de ore:Aggregation), actualmente: #?#
+6.configureDim2EdmXslProviderCHOType=Introducir los tipos de ítems (elemento edm:type de edm:ProvidedCHO), actualmente: #?#
+6.configureDim2EdmXslProviderCHOLanguage=Introducir idioma para los ítems (elemento edm:language de edm:ProvidedCHO), actualmente: #?#
 
 
 7=Comenzando el paso 7: Rellenar los skos:about de los ítems con los valores de las autoridades.
