Actualizar la cache yel LEEME

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -214,7 +214,7 @@
 
 
 6=Comenzando el paso 6: Configurar EDMCrosswalk mediante xsl
-6.summary=Se copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo.\nSe copiará el archivo DIM2EDM.xsl al directori de trabajo.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo.\nSe configurará el archivo DIM2EDM.xsl pidiendo valores para elementos de edm específicos.\nSe modificará el archivo dspace.cfg del directorio de trabajo para aceptar este crosswalk de diseminación.\nSe modificará el archivo del directorio de trabajo oaicat.properties para añadir el edmcrosswalk.
+6.summary=Se copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo.\nSe copiará el archivo DIM2EDM.xsl al directorio de trabajo.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo.\nSe configurará el archivo DIM2EDM.xsl pidiendo valores para elementos de edm específicos.\nSe modificará el archivo dspace.cfg del directorio de trabajo para aceptar este crosswalk de diseminación.\nSe modificará el archivo del directorio de trabajo oaicat.properties para añadir el edmcrosswalk.
 
 6.configure.dspacecfg.add=Creando nuevo archivo dspace.cfg en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
 6.configure.dspacecfg.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
