--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -115,13 +115,14 @@
 2.createElementAuth.dc.element=Elemento DC (escribir x para volver al menú anterior):
 2.createElementAuth.handle.community=Introduzca el handle de la comunidad o deje vacío para crear una nueva:
 2.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
+2.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades. Ir al paso 3.
 2.createElementAuth.element.notexist=El elemento #?# no existe.
 2.createElementAuth.create=Se comenzarán a crear items para la comunidad #?# y la colección #?# a partir de los ítems de colecciones que no son de autoridades.\nLos ítems creados se crearán con el tipo SKOS_AUTH. ¿Proceder ([y]/n)?
 
 2.fillAuthItems.getitems=Obtener los ítems de la colección: #?#
 2.fillAuthItems.additem=Crear ítem con valor: #?#
 2.fillAuthItems.canceladd=Ya existe una autoridad con este valor. Cancelando la operación de creación.
-2.fillAuthItems.addmetadata=Creando metadatos #?# , idioma: #?# , valor: #?#
+2.fillAuthItems.addmetadata=Creando metadatos #?# , idioma: #?# , valor: #?#, authority: #?#
 2.fillAuthItems.item.mismatch=Item #?# con handle #?# no concuerda #?#
 2.fillAuthItems.collection.item.noelement=Colección #?# item #?# no posee element #?# , idioma: #?#
 
