anyadir la posibilidad de configurar nuevos elementos dc no creados ya en dspacecfg

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -136,7 +136,7 @@
 
 
 3=Beginning step 3: Configuring Dspace and Askosi
-3.summary=Askosi must be installed (step 2) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
+3.summary=Askosi must be installed (step 1) before run this one.\nDspace configuration file "dspace.cfg" will be copied to the installer work dir: work.\nAll auth items and collections will be stored in memory to process them.\nNew elements will be able to be added if requested.\nFile "dspace.cfg" will be modified to add askosi plugin and its data dir.\nFor every unique auth element, file "dspace.cfg" will be modified to add a new vocabulary.\nFile "input-forms.xml" will be copied to the work dir.\nFor every collection a new form with its auth element will be created to link them to their corresponding vocabulary.\nNon auth collections and their corresponding forms will be asked to be modified to add the vocabulary.\nFor every vocabulary two new files will be created int the askosi data dir. These files will contain the database conex config and the sql query to the auth collection with the auth element.
 
 3.configureAll.notauthdcelements=Not configuring input-forms.xml and askosi data dir because there are not auth dc \
   elements. Go to step 2.
@@ -144,6 +144,13 @@
 3.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 3.configureAll.AskosiDataDir.notexist=Askosi Data dir does not exist or is no writeable: #?#
 3.configureAll.ok=Configuring Dspace and Askosi finished successfully. Remember to copy the files on work to dspace environment:\n dspace.cfg to the dspace config dir\n input-forms.xml to the dspace config dir.
+
+3.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
+3.addAuthDCElements.listauth=List all Authorities
+3.addAuthDCElements.listdc=List all DC elements
+
+3.addAuthDCElement=DC Element (type x to go former menu):
+3.addAuthDCElement.element.notexist=#?# Element does not exist.
 
 3.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 3.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
