--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -136,13 +136,20 @@
 
 
 3=Comenzando paso 3: Configuración de Dspace y Askosi
-3.summary=Se ha de instalar Askosi (paso 2) antes de lanzar éste.\nSe copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo del instalador: work.\nSe recogerán todos los elementos de autoridades con sus colecciones.\nSe modificará "dspace.cfg" para añadir el plugin de askosi y su directorio de trabajo.\nPara cada uno de los elementos de autoridades distintos se modificará "dspace.cfg" para añadir un vocabulario.\nSe copiará el archivo "input-forms.xml" al directorio de trabajo.\nPara cada colección se creará un formulario con su elemento para asociarlo al vocabulario.\nSe preguntará a qué formularios y a qué paǵinas de colecciones que no son autoridades, cada vocabulario debe ser añadido.\nSe crearán en el directorio de datos de Askosi, dos archivos para cada vocabulario para conectarse y realizar consultas a la base de datos relacional en la colección asociada al vocabulario.
+3.summary=Se ha de instalar Askosi (paso 1) antes de lanzar éste.\nSe copiará el archivo de configuración de dspace "dspace.cfg" al directorio de trabajo del instalador: work.\nSe recogerán todos los elementos de autoridades con sus colecciones.\nSe preguntará si se quieren añadir más elementos como autoridad en dspace.cfg\nSe modificará "dspace.cfg" para añadir el plugin de askosi y su directorio de trabajo.\nPara cada uno de los elementos de autoridades distintos se modificará "dspace.cfg" para añadir un vocabulario.\nSe copiará el archivo "input-forms.xml" al directorio de trabajo.\nPara cada colección se creará un formulario con su elemento para asociarlo al vocabulario.\nSe preguntará a qué formularios y a qué paǵinas de colecciones que no son autoridades, cada vocabulario debe ser añadido.\nSe crearán en el directorio de datos de Askosi, dos archivos para cada vocabulario para conectarse y realizar consultas a la base de datos relacional en la colección asociada al vocabulario.
 
 3.configureAll.notauthdcelements=No se procede a configurar el archivo input-forms.xml y el directorio de datos de askosi porque no hay elementos de autoridades dc. Vaya al paso 2.
 3.configureAll.inputforms.notexistEl archivo =#?# no existe o no tiene permisos de lectura.
 3.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 3.configureAll.AskosiDataDir.notexist=El directorio de datos de askosi #?# no existe o no tiene permisos de escritura
 3.configureAll.ok=La configuración de Dspace y Askosi terminó correctamente.\nRecuerde copiar los archivos dejados en el directorio de trabajo del instalador al entorno de dspace:\n El archivo dspace.cfg al directorio de configuración de dspace\nEl archivo input-forms.xml al directorio de configuración de dspace.
+
+3.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
+3.addAuthDCElements.listauth=Listar todas las autoridades
+3.addAuthDCElements.listdc=Listar todos los elementos DC
+
+3.addAuthDCElement=Elemento DC (escribir x para volver al menú anterior):
+3.addAuthDCElement.element.notexist=El elemento #?# no existe.
 
 3.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
 3.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([y]/n)?
